# vibeops

./: .env.example  .gitignore  Makefile  README.md  auto_deploy.md  compose.yml  dc  deno.json  manage.py  pyproject.toml  stack.py
abc/: .env  state.json
bento/: __init__.py  __main__.py
compose.d/: bento-mysql-versions.yml  bento-php-versions.yml
config/: compose.yml  redis-credentials.env.template
docs/: architecture.md  customization.md  nginx-br-zstd-optin.md  nginx-zstd.md
nginx/: nginx.conf
php/: Dockerfile  docker-entrypoint.sh  php-cron-as  php-supercronic  php-user-sync
plans/: 001-app-remove-lifecycle.md  001-establish-verification-and-ci.md  001-split-php-identity-and-permissions.md  001-tame-mysql-session-buffers.md  002-add-permission-tests-docs-and-wizard.md  002-mysql-healthcheck-depends-on.md  002-proxy-list-remove.md  002-resolve-app-php-version.md  003-mysql-safe-root-client.md  003-record-database-success.md  003-redis-hardening-and-app-credentials.md  004-env-driven-innodb-buffer-pool.md  004-managed-db-backup-schedule.md  004-serialize-state-mutations.md  005-ci-and-ruff-gate.md  005-mysql-84-defaults-polish.md  005-transactional-render-apply.md  006-app-fastcgi-cache-optin.md  006-mysql-error-and-slow-logs.md  006-unify-compose-context.md  007-mailpit-and-queue-worker-design.md  007-mysql-credential-dx.md  007-refresh-vibeops-skill.md  008-atomic-streaming-backups.md  008-mysql-backup-restore-cli.md  009-configurable-fpm-profiles.md  009-mysql-db-management-cli.md  010-hide-db-shell-password.md  011-decompose-helpers-imports.md  (+4 more)
(+362 files in other folders)
