[project]
name = "bento"
version = "1.0.0"
description = "Pure-Python management CLI for the bento Docker stack"
requires-python = ">=3.11"
# No runtime third-party dependencies; the CLI is stdlib-only.

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["bento", "tests", "manage.py"]

[tool.ruff.lint]
# Enable core correctness checks. F403/F405 are not ignored — wildcard imports
# are forbidden (see tests/test_module_invariants.py).
select = [
    "E9",   # runtime syntax errors
    "F63",  # invalid print/star-map usage
    "F7",   # syntax errors in type comments / future
    "F82",  # undefined names
    "F401", # unused imports
    "F403", # star import unable to detect undefined names
    "F405", # name may be undefined from star import
]
ignore = []
